// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapDimensionsToColDefs > base > should create col defs for arithmetic measures 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "headerClass": "gd-header-cell",
    "headerName": "Won",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_358184a8_9fa7cb9ce4d2947059b490e24a925317",
    "headerClass": "gd-header-cell",
    "headerName": "Calculated 'Lost' measure",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_7ff816a7_82e019308ff681db5738ce5040bc533d",
    "headerClass": "gd-header-cell",
    "headerName": "Ratio of Won and Lost",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for empty values 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_attr.f_stage.stagename",
    "headerClass": "gd-header-cell",
    "headerName": "Stage Name",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single column attribute 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": true,
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single metric 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single metric with column attribute 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single metric with row and column attributes 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single metric with row attribute 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single metric with two row and one column attributes 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single metric with two row and two column attributes 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_attr.f_stage.stagename",
    "headerClass": "gd-header-cell",
    "headerName": "Stage Name",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for single row attribute 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for two measures 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "headerClass": "gd-header-cell",
    "headerName": "Won",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for two measures with column attribute 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "headerClass": "gd-header-cell",
    "headerName": "Won",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for two measures with row and column attributes 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "headerClass": "gd-header-cell",
    "headerName": "Won",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for two measures with three rows and two column attributes 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_attr.f_owner.salesrep",
    "headerClass": "gd-header-cell",
    "headerName": "Sales Rep",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_opportunitysnapshot.forecastcategory_id",
    "headerClass": "gd-header-cell",
    "headerName": "Forecast Category",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "headerClass": "gd-header-cell",
    "headerName": "Won",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for two measures with two row and one column attributes 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
    "headerClass": "gd-header-cell",
    "headerName": "Won",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for with attributes without measures 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_attr.f_stage.stagename",
    "headerClass": "gd-header-cell",
    "headerName": "Stage Name",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": true,
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > base > should create col defs for with two same dates 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_dt_oppcreated_timestamp.year",
    "headerClass": "gd-header-cell",
    "headerName": "Created - Year",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "created.test",
    "headerClass": "gd-header-cell",
    "headerName": "Created - Year",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
    "headerClass": "gd-header-cell",
    "headerName": "Amount",
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > transposition > should create col defs for single measure pivot with both attributes and metrics in rows 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellRenderer": [Function],
    "field": "measureGroup_name",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellRenderer": [Function],
    "field": "measureGroup_value",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_attr.f_stage.stagename",
    "headerClass": "gd-header-cell",
    "headerName": "Stage Name",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > transposition > should create col defs for two measures in rows and column attrs on top 1`] = `
[
  {
    "cellRenderer": [Function],
    "field": "measureGroup_name",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellRenderer": [Function],
    "field": "measureGroup_value",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > transposition > should create col defs for two measures in rows and only column attrs on left 1`] = `
[
  {
    "cellRenderer": [Function],
    "field": "measureGroup_name",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellRenderer": [Function],
    "field": "measureGroup_value",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.department_id",
    "headerClass": "gd-header-cell",
    "headerName": "Department",
    "pivot": true,
    "valueGetter": [Function],
  },
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_f_owner.region_id",
    "headerClass": "gd-header-cell",
    "headerName": "Region",
    "pivot": true,
    "valueGetter": [Function],
  },
]
`;

exports[`mapDimensionsToColDefs > transposition > should create col defs for two measures with single row attr with metrics in rows 1`] = `
[
  {
    "cellClass": [Function],
    "cellRenderer": [Function],
    "field": "a_label.f_product.product.name",
    "headerClass": "gd-header-cell",
    "headerName": "Product",
    "pivot": false,
    "valueGetter": [Function],
  },
  {
    "cellRenderer": [Function],
    "field": "measureGroup_name",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
  {
    "cellRenderer": [Function],
    "field": "measureGroup_value",
    "headerName": "",
    "sortable": false,
    "suppressHeaderMenuButton": true,
    "valueGetter": [Function],
  },
]
`;
